Plantilla de proyecto integrador

--- a/sitio/plantilla.html
+++ b/sitio/plantilla.html
@@ -13,7 +13,7 @@
         <header>
             <!-- logo + brand -->
             <a href="index.html">
-                imagen +
+                <img src="imgs/m-iso.png">
                 Morningstar
             </a>
             <!-- navegación -->
@@ -30,11 +30,32 @@
     <main>
         <!-- contenido -->
 
+
     </main>
+    <div id="divFooter">
     <footer>
-
+        <!-- logo + brand -->
+        <a href="index.html">
+            <img src="imgs/m-iso.png" id="logoFooter"  alt="logo">
+            Morningstar
+        </a>
+        <!-- logos de redes sociales -->
+        <nav>
+            <a href="#">
+                <img src="imgs/twitter-w.png">
+            </a>
+            <a href="#">
+                <img src="imgs/linkedin-w.png">
+            </a>
+            <a href="#">
+                <img src="imgs/instagram-w.png">
+            </a>
+            <a href="#">
+                <img src="imgs/facebook-w.png">
+            </a>
+        </nav>
     </footer>
-
+    </div>
 
 </body>
 </html>
