página Nosotros y página Features

--- a/sitio/nosotros.html
+++ b/sitio/nosotros.html
@@ -31,7 +31,12 @@
     </div>
     <main>
         <!-- contenido -->
-
+        <section id="nosotros">
+            <img src="imgs/team-1.png">
+            <img src="imgs/team2.jpg">
+            <img src="imgs/team3.jpg">
+            <img src="imgs/team4.jpg">
+        </section>
 
     </main>
     <div id="divFooter">
