resolución duda opacity

--- a/clase5/slider.html
+++ b/clase5/slider.html
@@ -26,5 +26,13 @@
     </li>
   </ul>
 </div>
+
+video: <a href="https://www.youtube.com/watch?v=Eldu7ib-u70" target="_blank">
+    https://www.youtube.com/watch?v=Eldu7ib-u70
+  </a> <br>
+github <a href="https://github.com/SLeeDw20/slider-automatico" target="_blank">https://github.com/SLeeDw20/slider-automatico</a>
+
+
+
 </body>
 </html>
