botones sección index

--- a/sitio/index.html
+++ b/sitio/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Morningstar</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.css" integrity="sha512-51YkPZiK92RsprDZXbzgbxf+z74nK54zqO7KI/jXiwZY8QvTrx5v/lmP5NlWwKeIiXrTUIT5MypLD20xQROp6w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -33,8 +34,16 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi culpa cumque et explicabo fuga illo incidunt, iste, minus molestiae mollitia natus neque nostrum, officia optio perferendis ullam ut vitae.
                 </p>
-                <a href="#">botón 1</a>
-                <a href="#">botón 2</a>
+                <a href="#">
+                    disponible en
+                    <span class="fa-brands fa-apple"></span>
+                    Apple Store
+                </a>
+                <a href="#">
+                    disponible en
+                    <span class="fa-brands fa-google-play"></span>
+                    Play Store
+                </a>
             </article>
             <!-- imagen index -->
             <img src="imgs/slider-thumb.png">
