--- a/sitio/index.html
+++ b/sitio/index.html
@@ -34,16 +34,18 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi culpa cumque et explicabo fuga illo incidunt, iste, minus molestiae mollitia natus neque nostrum, officia optio perferendis ullam ut vitae.
                 </p>
-                <a href="#">
-                    disponible en
-                    <span class="fa-brands fa-apple"></span>
-                    Apple Store
-                </a>
-                <a href="#">
-                    disponible en
-                    <span class="fa-brands fa-google-play"></span>
-                    Play Store
-                </a>
+                    <div>
+                    <a href="#">
+                        disponible en <br>
+                        <span class="fa-brands fa-apple"></span>
+                        Apple Store
+                    </a>
+                    <a href="#">
+                        disponible en
+                        <span class="fa-brands fa-google-play"></span>
+                        Play Store
+                    </a>
+                </div>
             </article>
             <!-- imagen index -->
             <img src="imgs/slider-thumb.png">
@@ -52,7 +54,31 @@
     </div>
     <main>
         <!-- contenido -->
+        <section id="cajasIndex">
 
+            <article>
+                <img src="imgs/retina.png">
+                <h2>Retina display</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectet adipisicing elit sed do eiusm.
+                </p>
+            </article>
+            <article>
+                <img src="imgs/responsive.png">
+                <h2>Responsive design</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectet adipisicing elit sed do eiusm.
+                </p>
+            </article>
+            <article>
+                <img src="imgs/exclusive.png">
+                <h2>Diseño exclusivo</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectet adipisicing elit sed do eiusm.
+                </p>
+            </article>
+
+        </section>
 
     </main>
     <div id="divFooter">
