--- a/sitio/buy.html
+++ b/sitio/buy.html
@@ -49,7 +49,7 @@
             </article>
             <article>
                 <h2>Personal</h2>
-                <span class="precio">
+                <span id="precioDestacado">
                     $<span class="cifra">69</span> x mes
                 </span>
                 <ul>
@@ -60,7 +60,7 @@
                     <li>10 GB Ancho de banda</li>
                     <li>Seguridad mejorada</li>
                 </ul>
-                <a href="#">Contratar</a>
+                <a id="destacado" href="#">Contratar</a>
             </article>
             <article>
                 <h2>Empresa</h2>
